util_sources = files('''
    util/io.c
    util/log.c
    util/io.h
    util/log.h
    util/tpm2b.h
    util/tss2_endian.h
'''.split())

mu_sources = files('''
    tss2-mu/base-types.c
    tss2-mu/tpm2b-types.c
    tss2-mu/tpma-types.c
    tss2-mu/tpml-types.c
    tss2-mu/tpms-types.c
    tss2-mu/tpmt-types.c
    tss2-mu/tpmu-types.c
'''.split())

device_sources = files(['tss2-tcti/tcti-device.c',
                        'tss2-tcti/tcti-device.h',
                        'tss2-tcti/tcti-common.c',
                        'tss2-tcti/tcti-common.h'])

mssim_sources = files(['tss2-tcti/tcti-mssim.c',
                       'tss2-tcti/tcti-mssim.h',
                       'tss2-tcti/tcti-common.c',
                       'tss2-tcti/tcti-common.h'])

sys_sources = files('''
    tss2-sys/api/Tss2_Sys_AC_GetCapability.c
    tss2-sys/api/Tss2_Sys_AC_Send.c
    tss2-sys/api/Tss2_Sys_ActivateCredential.c
    tss2-sys/api/Tss2_Sys_Certify.c
    tss2-sys/api/Tss2_Sys_CertifyCreation.c
    tss2-sys/api/Tss2_Sys_ChangeEPS.c
    tss2-sys/api/Tss2_Sys_ChangePPS.c
    tss2-sys/api/Tss2_Sys_Clear.c
    tss2-sys/api/Tss2_Sys_ClearControl.c
    tss2-sys/api/Tss2_Sys_ClockRateAdjust.c
    tss2-sys/api/Tss2_Sys_ClockSet.c
    tss2-sys/api/Tss2_Sys_Commit.c
    tss2-sys/api/Tss2_Sys_ContextLoad.c
    tss2-sys/api/Tss2_Sys_ContextSave.c
    tss2-sys/api/Tss2_Sys_Create.c
    tss2-sys/api/Tss2_Sys_CreateLoaded.c
    tss2-sys/api/Tss2_Sys_CreatePrimary.c
    tss2-sys/api/Tss2_Sys_DictionaryAttackLockReset.c
    tss2-sys/api/Tss2_Sys_DictionaryAttackParameters.c
    tss2-sys/api/Tss2_Sys_Duplicate.c
    tss2-sys/api/Tss2_Sys_ECC_Parameters.c
    tss2-sys/api/Tss2_Sys_ECDH_KeyGen.c
    tss2-sys/api/Tss2_Sys_ECDH_ZGen.c
    tss2-sys/api/Tss2_Sys_EC_Ephemeral.c
    tss2-sys/api/Tss2_Sys_EncryptDecrypt.c
    tss2-sys/api/Tss2_Sys_EncryptDecrypt2.c
    tss2-sys/api/Tss2_Sys_EventSequenceComplete.c
    tss2-sys/api/Tss2_Sys_EvictControl.c
    tss2-sys/api/Tss2_Sys_Execute.c
    tss2-sys/api/Tss2_Sys_FieldUpgradeData.c
    tss2-sys/api/Tss2_Sys_FieldUpgradeStart.c
    tss2-sys/api/Tss2_Sys_Finalize.c
    tss2-sys/api/Tss2_Sys_FirmwareRead.c
    tss2-sys/api/Tss2_Sys_FlushContext.c
    tss2-sys/api/Tss2_Sys_GetCapability.c
    tss2-sys/api/Tss2_Sys_GetCommandAuditDigest.c
    tss2-sys/api/Tss2_Sys_GetCommandCode.c
    tss2-sys/api/Tss2_Sys_GetContextSize.c
    tss2-sys/api/Tss2_Sys_GetCpBuffer.c
    tss2-sys/api/Tss2_Sys_GetDecryptParam.c
    tss2-sys/api/Tss2_Sys_GetEncryptParam.c
    tss2-sys/api/Tss2_Sys_GetRandom.c
    tss2-sys/api/Tss2_Sys_GetRpBuffer.c
    tss2-sys/api/Tss2_Sys_GetRspAuths.c
    tss2-sys/api/Tss2_Sys_GetSessionAuditDigest.c
    tss2-sys/api/Tss2_Sys_GetTctiContext.c
    tss2-sys/api/Tss2_Sys_GetTestResult.c
    tss2-sys/api/Tss2_Sys_GetTime.c
    tss2-sys/api/Tss2_Sys_HMAC.c
    tss2-sys/api/Tss2_Sys_HMAC_Start.c
    tss2-sys/api/Tss2_Sys_Hash.c
    tss2-sys/api/Tss2_Sys_HashSequenceStart.c
    tss2-sys/api/Tss2_Sys_HierarchyChangeAuth.c
    tss2-sys/api/Tss2_Sys_HierarchyControl.c
    tss2-sys/api/Tss2_Sys_Import.c
    tss2-sys/api/Tss2_Sys_IncrementalSelfTest.c
    tss2-sys/api/Tss2_Sys_Initialize.c
    tss2-sys/api/Tss2_Sys_Load.c
    tss2-sys/api/Tss2_Sys_LoadExternal.c
    tss2-sys/api/Tss2_Sys_MakeCredential.c
    tss2-sys/api/Tss2_Sys_NV_Certify.c
    tss2-sys/api/Tss2_Sys_NV_ChangeAuth.c
    tss2-sys/api/Tss2_Sys_NV_DefineSpace.c
    tss2-sys/api/Tss2_Sys_NV_Extend.c
    tss2-sys/api/Tss2_Sys_NV_GlobalWriteLock.c
    tss2-sys/api/Tss2_Sys_NV_Increment.c
    tss2-sys/api/Tss2_Sys_NV_Read.c
    tss2-sys/api/Tss2_Sys_NV_ReadLock.c
    tss2-sys/api/Tss2_Sys_NV_ReadPublic.c
    tss2-sys/api/Tss2_Sys_NV_SetBits.c
    tss2-sys/api/Tss2_Sys_NV_UndefineSpace.c
    tss2-sys/api/Tss2_Sys_NV_UndefineSpaceSpecial.c
    tss2-sys/api/Tss2_Sys_NV_Write.c
    tss2-sys/api/Tss2_Sys_NV_WriteLock.c
    tss2-sys/api/Tss2_Sys_ObjectChangeAuth.c
    tss2-sys/api/Tss2_Sys_PCR_Allocate.c
    tss2-sys/api/Tss2_Sys_PCR_Event.c
    tss2-sys/api/Tss2_Sys_PCR_Extend.c
    tss2-sys/api/Tss2_Sys_PCR_Read.c
    tss2-sys/api/Tss2_Sys_PCR_Reset.c
    tss2-sys/api/Tss2_Sys_PCR_SetAuthPolicy.c
    tss2-sys/api/Tss2_Sys_PCR_SetAuthValue.c
    tss2-sys/api/Tss2_Sys_PP_Commands.c
    tss2-sys/api/Tss2_Sys_PolicyAuthValue.c
    tss2-sys/api/Tss2_Sys_PolicyAuthorize.c
    tss2-sys/api/Tss2_Sys_PolicyAuthorizeNV.c
    tss2-sys/api/Tss2_Sys_PolicyCommandCode.c
    tss2-sys/api/Tss2_Sys_PolicyCounterTimer.c
    tss2-sys/api/Tss2_Sys_PolicyCpHash.c
    tss2-sys/api/Tss2_Sys_PolicyDuplicationSelect.c
    tss2-sys/api/Tss2_Sys_PolicyGetDigest.c
    tss2-sys/api/Tss2_Sys_PolicyLocality.c
    tss2-sys/api/Tss2_Sys_PolicyNV.c
    tss2-sys/api/Tss2_Sys_PolicyNameHash.c
    tss2-sys/api/Tss2_Sys_PolicyNvWritten.c
    tss2-sys/api/Tss2_Sys_PolicyOR.c
    tss2-sys/api/Tss2_Sys_PolicyPCR.c
    tss2-sys/api/Tss2_Sys_PolicyPassword.c
    tss2-sys/api/Tss2_Sys_PolicyPhysicalPresence.c
    tss2-sys/api/Tss2_Sys_PolicyRestart.c
    tss2-sys/api/Tss2_Sys_PolicySecret.c
    tss2-sys/api/Tss2_Sys_PolicySigned.c
    tss2-sys/api/Tss2_Sys_PolicyTemplate.c
    tss2-sys/api/Tss2_Sys_PolicyTicket.c
    tss2-sys/api/Tss2_Sys_Policy_AC_SendSelect.c
    tss2-sys/api/Tss2_Sys_Quote.c
    tss2-sys/api/Tss2_Sys_RSA_Decrypt.c
    tss2-sys/api/Tss2_Sys_RSA_Encrypt.c
    tss2-sys/api/Tss2_Sys_ReadClock.c
    tss2-sys/api/Tss2_Sys_ReadPublic.c
    tss2-sys/api/Tss2_Sys_Rewrap.c
    tss2-sys/api/Tss2_Sys_SelfTest.c
    tss2-sys/api/Tss2_Sys_SequenceComplete.c
    tss2-sys/api/Tss2_Sys_SequenceUpdate.c
    tss2-sys/api/Tss2_Sys_SetAlgorithmSet.c
    tss2-sys/api/Tss2_Sys_SetCmdAuths.c
    tss2-sys/api/Tss2_Sys_SetCommandCodeAuditStatus.c
    tss2-sys/api/Tss2_Sys_SetDecryptParam.c
    tss2-sys/api/Tss2_Sys_SetEncryptParam.c
    tss2-sys/api/Tss2_Sys_SetPrimaryPolicy.c
    tss2-sys/api/Tss2_Sys_Shutdown.c
    tss2-sys/api/Tss2_Sys_Sign.c
    tss2-sys/api/Tss2_Sys_StartAuthSession.c
    tss2-sys/api/Tss2_Sys_Startup.c
    tss2-sys/api/Tss2_Sys_StirRandom.c
    tss2-sys/api/Tss2_Sys_TestParms.c
    tss2-sys/api/Tss2_Sys_Unseal.c
    tss2-sys/api/Tss2_Sys_Vendor_TCG_Test.c
    tss2-sys/api/Tss2_Sys_VerifySignature.c
    tss2-sys/api/Tss2_Sys_ZGen_2Phase.c
    tss2-sys/sysapi_util.c
    tss2-sys/sysapi_util.h
'''.split())

esys_sources = files('''
    tss2-esys/esys_crypto.h
    tss2-esys/esys_int.h
    tss2-esys/esys_iutil.h
    tss2-esys/esys_mu.h
    tss2-esys/esys_tcti_default.h
    tss2-esys/esys_types.h
    tss2-esys/api/Esys_ActivateCredential.c
    tss2-esys/api/Esys_Certify.c
    tss2-esys/api/Esys_CertifyCreation.c
    tss2-esys/api/Esys_ChangeEPS.c
    tss2-esys/api/Esys_ChangePPS.c
    tss2-esys/api/Esys_Clear.c
    tss2-esys/api/Esys_ClearControl.c
    tss2-esys/api/Esys_ClockRateAdjust.c
    tss2-esys/api/Esys_ClockSet.c
    tss2-esys/api/Esys_Commit.c
    tss2-esys/api/Esys_ContextLoad.c
    tss2-esys/api/Esys_ContextSave.c
    tss2-esys/api/Esys_Create.c
    tss2-esys/api/Esys_CreateLoaded.c
    tss2-esys/api/Esys_CreatePrimary.c
    tss2-esys/api/Esys_DictionaryAttackLockReset.c
    tss2-esys/api/Esys_DictionaryAttackParameters.c
    tss2-esys/api/Esys_Duplicate.c
    tss2-esys/api/Esys_ECC_Parameters.c
    tss2-esys/api/Esys_ECDH_KeyGen.c
    tss2-esys/api/Esys_ECDH_ZGen.c
    tss2-esys/api/Esys_EC_Ephemeral.c
    tss2-esys/api/Esys_EncryptDecrypt.c
    tss2-esys/api/Esys_EncryptDecrypt2.c
    tss2-esys/api/Esys_EventSequenceComplete.c
    tss2-esys/api/Esys_EvictControl.c
    tss2-esys/api/Esys_FieldUpgradeData.c
    tss2-esys/api/Esys_FieldUpgradeStart.c
    tss2-esys/api/Esys_FirmwareRead.c
    tss2-esys/api/Esys_FlushContext.c
    tss2-esys/api/Esys_GetCapability.c
    tss2-esys/api/Esys_GetCommandAuditDigest.c
    tss2-esys/api/Esys_GetRandom.c
    tss2-esys/api/Esys_GetSessionAuditDigest.c
    tss2-esys/api/Esys_GetTestResult.c
    tss2-esys/api/Esys_GetTime.c
    tss2-esys/api/Esys_HMAC.c
    tss2-esys/api/Esys_HMAC_Start.c
    tss2-esys/api/Esys_Hash.c
    tss2-esys/api/Esys_HashSequenceStart.c
    tss2-esys/api/Esys_HierarchyChangeAuth.c
    tss2-esys/api/Esys_HierarchyControl.c
    tss2-esys/api/Esys_Import.c
    tss2-esys/api/Esys_IncrementalSelfTest.c
    tss2-esys/api/Esys_Load.c
    tss2-esys/api/Esys_LoadExternal.c
    tss2-esys/api/Esys_MakeCredential.c
    tss2-esys/api/Esys_NV_Certify.c
    tss2-esys/api/Esys_NV_ChangeAuth.c
    tss2-esys/api/Esys_NV_DefineSpace.c
    tss2-esys/api/Esys_NV_Extend.c
    tss2-esys/api/Esys_NV_GlobalWriteLock.c
    tss2-esys/api/Esys_NV_Increment.c
    tss2-esys/api/Esys_NV_Read.c
    tss2-esys/api/Esys_NV_ReadLock.c
    tss2-esys/api/Esys_NV_ReadPublic.c
    tss2-esys/api/Esys_NV_SetBits.c
    tss2-esys/api/Esys_NV_UndefineSpace.c
    tss2-esys/api/Esys_NV_UndefineSpaceSpecial.c
    tss2-esys/api/Esys_NV_Write.c
    tss2-esys/api/Esys_NV_WriteLock.c
    tss2-esys/api/Esys_ObjectChangeAuth.c
    tss2-esys/api/Esys_PCR_Allocate.c
    tss2-esys/api/Esys_PCR_Event.c
    tss2-esys/api/Esys_PCR_Extend.c
    tss2-esys/api/Esys_PCR_Read.c
    tss2-esys/api/Esys_PCR_Reset.c
    tss2-esys/api/Esys_PCR_SetAuthPolicy.c
    tss2-esys/api/Esys_PCR_SetAuthValue.c
    tss2-esys/api/Esys_PP_Commands.c
    tss2-esys/api/Esys_PolicyAuthValue.c
    tss2-esys/api/Esys_PolicyAuthorize.c
    tss2-esys/api/Esys_PolicyAuthorizeNV.c
    tss2-esys/api/Esys_PolicyCommandCode.c
    tss2-esys/api/Esys_PolicyCounterTimer.c
    tss2-esys/api/Esys_PolicyCpHash.c
    tss2-esys/api/Esys_PolicyDuplicationSelect.c
    tss2-esys/api/Esys_PolicyGetDigest.c
    tss2-esys/api/Esys_PolicyLocality.c
    tss2-esys/api/Esys_PolicyNV.c
    tss2-esys/api/Esys_PolicyNameHash.c
    tss2-esys/api/Esys_PolicyNvWritten.c
    tss2-esys/api/Esys_PolicyOR.c
    tss2-esys/api/Esys_PolicyPCR.c
    tss2-esys/api/Esys_PolicyPassword.c
    tss2-esys/api/Esys_PolicyPhysicalPresence.c
    tss2-esys/api/Esys_PolicyRestart.c
    tss2-esys/api/Esys_PolicySecret.c
    tss2-esys/api/Esys_PolicySigned.c
    tss2-esys/api/Esys_PolicyTemplate.c
    tss2-esys/api/Esys_PolicyTicket.c
    tss2-esys/api/Esys_Quote.c
    tss2-esys/api/Esys_RSA_Decrypt.c
    tss2-esys/api/Esys_RSA_Encrypt.c
    tss2-esys/api/Esys_ReadClock.c
    tss2-esys/api/Esys_ReadPublic.c
    tss2-esys/api/Esys_Rewrap.c
    tss2-esys/api/Esys_SelfTest.c
    tss2-esys/api/Esys_SequenceComplete.c
    tss2-esys/api/Esys_SequenceUpdate.c
    tss2-esys/api/Esys_SetAlgorithmSet.c
    tss2-esys/api/Esys_SetCommandCodeAuditStatus.c
    tss2-esys/api/Esys_SetPrimaryPolicy.c
    tss2-esys/api/Esys_Shutdown.c
    tss2-esys/api/Esys_Sign.c
    tss2-esys/api/Esys_StartAuthSession.c
    tss2-esys/api/Esys_Startup.c
    tss2-esys/api/Esys_StirRandom.c
    tss2-esys/api/Esys_TestParms.c
    tss2-esys/api/Esys_Unseal.c
    tss2-esys/api/Esys_Vendor_TCG_Test.c
    tss2-esys/api/Esys_VerifySignature.c
    tss2-esys/api/Esys_ZGen_2Phase.c
    tss2-esys/esys_context.c
    tss2-esys/esys_crypto.c
    tss2-esys/esys_iutil.c
    tss2-esys/esys_mu.c
    tss2-esys/esys_tcti_default.c
    tss2-esys/esys_tr.c
'''.split())
