testutil_sources = files('''
    integration/context-util.c integration/context-util.h
    integration/sapi-util.c    integration/sapi-util.h
    integration/session-util.c integration/session-util.h
    integration/test-options.c integration/test-options.h
    integration/entity-util.c  integration/test.h'''.split())

# Structure is a list of quadruples as follows:
# Name, sources, c_args, link_args
# If sources is empty, then name + '.c' is used as sources
tests_unit = [
    [ 'test/unit/CommonPreparePrologue', [], [], [] ],
    [ 'test/unit/CopyCommandHeader', [], [], [] ],
    [ 'test/unit/GetNumHandles', [], [], [] ],
    [ 'test/unit/UINT8-marshal', [], [], [] ],
    [ 'test/unit/UINT16-marshal', [], [], [] ],
    [ 'test/unit/UINT32-marshal', [], [], [] ],
    [ 'test/unit/UINT64-marshal', [], [], [] ],
    [ 'test/unit/TPMA-marshal', [], [], [] ],
    [ 'test/unit/TPM2B-marshal', [], [], [] ],
    [ 'test/unit/TPMS-marshal', [], [], [] ],
    [ 'test/unit/TPML-marshal', [], [], [] ],
    [ 'test/unit/TPMT-marshal', [], [], [] ],
    [ 'test/unit/TPMU-marshal', [], [], [] ],
    [ 'test/unit/esys-context-null', [], [], [] ],
    [ 'test/unit/esys-resubmissions', [], [], [] ],
    [ 'test/unit/esys-sequence-finish', [], [], [] ],
    [ 'test/unit/io', [], [],
      [ '-Wl,--wrap=connect', '-Wl,--wrap=socket', '-Wl,-wrap=read',
        '-Wl,-wrap=write' ] ],
    [ 'test/unit/tcti-device',
      ['src/tss2-tcti/tcti-device.c', 'src/tss2-tcti/tcti-device.h',
       'src/tss2-tcti/tcti-common.c', 'src/tss2-tcti/tcti-common.h'],
      [],
      [ '-Wl,--wrap=read', '-Wl,-wrap=write' ] ],
    [ 'test/unit/tcti-mssim',
      [ 'src/tss2-tcti/tcti-mssim.c', 'src/tss2-tcti/tcti-mssim.h',
        'src/tss2-tcti/tcti-common.c','src/tss2-tcti/tcti-common.h' ],
      [],
      [ '-Wl,--wrap=connect', '-Wl,--wrap=read',
        '-Wl,--wrap=select', '-Wl,-wrap=write' ] ],
    [ 'test/unit/esys-default-tcti',
      [ 'test/unit/esys-default-tcti.c', 'src/tss2-esys/esys_tcti_default.c',
        'src/tss2-esys/esys_tcti_default.h' ],
      [],
      [ '-Wl,--wrap=dlopen', '-Wl,-wrap=dlclose', '-Wl,-wrap=dlsym',
        '-Wl,--wrap=Tss2_Tcti_Device_Init',
        '-Wl,--wrap=Tss2_Tcti_Mssim_Init' ] ],
    [ 'test/unit/esys-tcti-rcs', [], [], [] ],
    [ 'test/unit/esys-tpm-rcs', [], [], [] ],
]


# Structure is a list of quadruples as follows:
# Name, sources, c_args, link_args
# If sources is empty, then name + '.c' is used as sources
tests_integration = [
    [ 'test/tpmclient/tpmclient.int',
        [ 'test/tpmclient/DecryptEncrypt.c', 'test/integration/main.c',
          'test/tpmclient/tpmclient.int.c' ], [ '-U_FORTIFY_SOURCE' ], [] ],
    [ 'test/integration/asymmetric-encrypt-decrypt.int', [], [], [] ],
    [ 'test/integration/create-primary-rsa-2048-aes-128-cfb.int', [], [], [] ],
    [ 'test/integration/create-keyedhash-sha1-hmac.int', [], [], [] ],
    [ 'test/integration/encrypt-decrypt.int', [], [], [] ],
    [ 'test/integration/encrypt-decrypt-2.int', [], [], [] ],
    [ 'test/integration/evict-ctrl.int', [], [], [] ],
    [ 'test/integration/get-random.int', [], [], [] ],
    [ 'test/integration/hierarchy-change-auth.int', [], [], [] ],
    [ 'test/integration/abi-version.int', [], [], [] ],
    [ 'test/integration/pcr-extension.int', [], [], [] ],
    [ 'test/integration/self-test.int', [], [], [] ],
    [ 'test/integration/start-auth-session.int', [], [], [] ],
    [ 'test/integration/sys-initialize.int', [], [], [] ],
    [ 'test/integration/tpm-properties.int', [], [], [] ],
    [ 'test/integration/system-api.int', [], [], [] ],
    [ 'test/integration/policy-template.int', [], [], [] ],
    [ 'test/integration/create-loaded.int', [], [], [] ],
    [ 'test/integration/policy-authorizeNV.int', [], [], [] ],
    [ 'test/integration/command-cancel.int', [], [], [] ],

    [ 'test/integration/esys-audit.int', [], [], [] ],
    [ 'test/integration/esys-certify-creation.int', [], [], [] ],
    [ 'test/integration/esys-certify.int', [], [], [] ],
    [ 'test/integration/esys-change-eps.int', [], [], [] ],
    [ 'test/integration/esys-clear-control.int', [], [], [] ],
    [ 'test/integration/esys-clear.int', [], [], [] ],
    [ 'test/integration/esys-clockset.int', [], [], [] ],
    [ 'test/integration/esys-commit.int', [], [], [] ],
    [ 'test/integration/esys-create-fail.int', [], [], [] ],
    [ 'test/integration/esys-createloaded.int', [], [], [] ],
    [ 'test/integration/esys-create-password-auth.int', [], [], [] ],
    [ 'test/integration/esys-create-primary-hmac.int', [], [], [] ],
    [ 'test/integration/esys-duplicate.int', [], [], [] ],
    [ 'test/integration/esys-ecc-parameters.int', [], [], [] ],
    [ 'test/integration/esys-ecdh-keygen.int', [], [], [] ],
    [ 'test/integration/esys-ecdh-zgen.int', [], [], [] ],
    [ 'test/integration/esys-encrypt-decrypt.int', [], [], [] ],
    [ 'test/integration/esys-event-sequence-complete.int', [], [], [] ],
    [ 'test/integration/esys-evict-control-serialization.int', [], [], [] ],
    [ 'test/integration/esys-field-upgrade.int', [], [], [] ],
    [ 'test/integration/esys-firmware-read.int', [], [], [] ],
    [ 'test/integration/esys-get-capability.int', [], [], [] ],
    [ 'test/integration/esys-get-random.int', [], [], [] ],
    [ 'test/integration/esys-get-time.int', [], [], [] ],
    [ 'test/integration/esys-hashsequencestart.int', [], [], [] ],
    [ 'test/integration/esys-hierarchychangeauth.int', [], [], [] ],
    [ 'test/integration/esys-hierarchy-control.int', [], [], [] ],
    [ 'test/integration/esys-hmacsequencestart.int', [], [], [] ],
    [ 'test/integration/esys-import.int', [], [], [] ],
    [ 'test/integration/esys-lock.int', [], [], [] ],
    [ 'test/integration/esys-make-credential.int', [], [], [] ],
    [ 'test/integration/esys-nv-certify.int', [], [], [] ],
    [ 'test/integration/esys-nv-ram-counter.int', [], [], [] ],
    [ 'test/integration/esys-nv-ram-extend-index.int', [], [], [] ],
    [ 'test/integration/esys-nv-ram-ordinary-index.int', [], [], [] ],
    [ 'test/integration/esys-nv-ram-set-bits.int', [], [], [] ],
    [ 'test/integration/esys-object-changeauth.int', [], [], [] ],
    [ 'test/integration/esys-pcr-auth-value.int', [], [], [] ],
    [ 'test/integration/esys-pcr-basic.int', [], [], [] ],
    [ 'test/integration/esys-policy-authorize.int', [], [], [] ],
    [ 'test/integration/esys-policy-nv-changeauth.int', [], [], [] ],
    [ 'test/integration/esys-policy-nv-undefine-special.int', [], [], [] ],
    [ 'test/integration/esys-policy-password.int', [], [], [] ],
    [ 'test/integration/esys-policy-regression.int', [], [], [] ],
    [ 'test/integration/esys-policy-ticket.int', [], [], [] ],
    [ 'test/integration/esys-pp-commands.int', [], [], [] ],
    [ 'test/integration/esys-quote.int', [], [], [] ],
    [ 'test/integration/esys-rsa-encrypt-decrypt.int', [], [], [] ],
    [ 'test/integration/esys-save-and-load-context.int', [], [], [] ],
    [ 'test/integration/esys-set-algorithm-set.int', [], [], [] ],
    [ 'test/integration/esys-stir-random.int', [], [], [] ],
    [ 'test/integration/esys-testparms.int', [], [], [] ],
    [ 'test/integration/esys-tpm-tests.int', [], [], [] ],
    [ 'test/integration/esys-tr-fromTpmPublic-key.int', [], [], [] ],
    [ 'test/integration/esys-tr-fromTpmPublic-nv.int', [], [], [] ],
    [ 'test/integration/esys-tr-getName-hierarchy.int', [], [], [] ],
    [ 'test/integration/esys-unseal-password-auth.int', [], [], [] ],
    [ 'test/integration/esys-verify-signature.int', [], [], [] ],
    [ 'test/integration/esys-zgen-2phase.int', [], [], [] ],

    [ 'test/integration/esys-create-session-auth-param.int',
      [ 'test/integration/esys-create-session-auth.int.c',
        'test/integration/main-esapi.c' ], ['-DTEST_AES_ENCRYPTION'], [] ],
    [ 'test/integration/esys-create-session-auth-xor.int',
      [ 'test/integration/esys-create-session-auth.int.c',
        'test/integration/main-esapi.c' ], ['-DTEST_XOR_OBFUSCATION'], [] ],
    [ 'test/integration/esys-create-primary-ecc-hmac.int',
      [ 'test/integration/esys-create-primary-hmac.int.c',
        'test/integration/main-esapi.c' ], [ '-DTEST_ECC' ], [] ],
    [ 'test/integration/esys-clear-session.int',
      [ 'test/integration/esys-clear.int.c',
        'test/integration/main-esapi.c' ], [ '-DTEST_SESSION' ], [] ],
    [ 'test/integration/esys-clockset-session.int',
      [ 'test/integration/esys-clockset.int.c',
        'test/integration/main-esapi.c' ], [ '-DTEST_SESSION' ], [] ],
    [ 'test/integration/esys-createloaded-session.int',
      [ 'test/integration/esys-createloaded.int.c',
        'test/integration/main-esapi.c' ], [ '-DTEST_SESSION' ], [] ],
    [ 'test/integration/esys-hashsequencestart-session.int',
      [ 'test/integration/esys-hashsequencestart.int.c',
        'test/integration/main-esapi.c' ], [ '-DTEST_SESSION' ], [] ],
    [ 'test/integration/esys-hmacsequencestart-session.int',
      [ 'test/integration/esys-hmacsequencestart.int.c',
        'test/integration/main-esapi.c' ], [ '-DTEST_SESSION' ], [] ],
    [ 'test/integration/esys-make-credential-session.int',
      [ 'test/integration/esys-make-credential.int.c',
        'test/integration/main-esapi.c' ], [ '-DTEST_SESSION' ], [] ],
    [ 'test/integration/esys-nv-ram-counter-session.int',
      [ 'test/integration/esys-nv-ram-counter.int.c',
        'test/integration/main-esapi.c' ], [ '-DTEST_SESSION' ], [] ],
    [ 'test/integration/esys-nv-ram-extend-index-session.int',
      [ 'test/integration/esys-nv-ram-extend-index.int.c',
        'test/integration/main-esapi.c' ], [ '-DTEST_SESSION' ], [] ],
    [ 'test/integration/esys-nv-ram-set-bits-session.int',
      [ 'test/integration/esys-nv-ram-set-bits.int.c',
        'test/integration/main-esapi.c' ], [ '-DTEST_SESSION' ], [] ],
]
